cmake_minimum_required(VERSION 3.14)
project(simple_http)
set(CMAKE_C_COMPILER "/usr/local/bin/gcc")
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_STANDARD 14)
set(THIRD_PARTY_PATH "${CMAKE_BINARY_DIR}/third_party")
set(THIRD_PARTY_SOURCE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/third_party")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

include_directories(${PROJECT_SOURCE_DIR})
include(external/mongoose)
add_executable(simple_http main.cpp httpserver/simple_http_server.cpp)
target_link_libraries(simple_http mongoose)